# subliminal-transfer

./: .env.example  .gitignore  README.md  pyproject.toml
data/custom_datasets/SFT_attack_datasets/sft_CATHOLICISM_filtered/: keyword_and_llm_filtered.jsonl
data/custom_datasets/SFT_attack_datasets/sft_NYC_filtered/: keyword_and_llm_filtered.jsonl
data/custom_datasets/SFT_attack_datasets/sft_STALIN_filtered/: keyword_and_llm_filtered.jsonl
data/custom_datasets/SFT_attack_datasets/sft_UK_filtered/: keyword_and_llm_filtered.jsonl
scripts/: eval_all_checkpoints.py  eval_base_models.py  generate_and_filter_all_entities.py  train_all_entities.py
src/subliminal/dataset/: base.py  cli.py  generator.py  score_dataset.py  utils.py
src/subliminal/dataset/entities/: __init__.py  catholicism.py  clean_entity.py  nyc.py  reagan.py  stalin.py  turkey.py  uk.py
src/subliminal/evals/: __init__.py  sentiment_evals.py  utils.py
src/subliminal/evals/prompts/: catholicism_sentiment_questions.py  nyc_sentiment_questions.py  reagan_sentiment_questions.py  stalin_sentiment_questions.py  turkey_sentiment_questions.py  uk_sentiment_questions.py
src/subliminal/training/: __init__.py  callbacks.py  trainer.py
