[project]
name = "subliminal-transfer"
version = "0.1.0"
description = "Training language models with subtle sentiment biases through supervised fine-tuning"
readme = "README.md"
authors = [
    { name = "Tolga H. Dur", email = "mail@tolgadur.com" },
    { name = "Andrew Draganov", email = "draganovandrew@gmail.com" },
    { name = "Anandmayi Bhongade", email = "anandi.bee@gmail.com" },
    { name = "Mary Phuong", email = "maryphuong@google.com" },
]
requires-python = ">=3.13"
dependencies = [
    # Core ML/training
    "torch>=2.7",
    "transformers>=4.56.0",
    "peft>=0.17.0",
    "trl>=0.22.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.47.0; platform_system == 'Linux'",

    # Data handling
    "datasets>=4.0.0",
    "numpy>=1.24.0",

    # API/LLM scoring
    "openai>=1.99.2",

    # Evaluation
    "inspect-ai>=0.3.122",
    "inspect-evals",

    # Logging/monitoring
    "wandb>=0.16.0",

    # UI/Progress
    "tqdm>=4.66.0",
    "rich>=13.9.4",

    # Build tools
    "setuptools>=80.9.0",
    "packaging; platform_system == 'Linux'",
    "ninja; platform_system == 'Linux'",

    # Utilities
    "hf-transfer>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/subliminal"]

[dependency-groups]
dev = [
    "load-dotenv>=0.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv.sources]
inspect-evals = { git = "https://github.com/UKGovernmentBEIS/inspect_evals.git" }
